use uri instead of deprecated url constructor