@@ -38,12 +38,12 @@ public class LnurlAuth {
     private final byte[] k1;
     private final String action;
 
-    public LnurlAuth(URI uri) throws MalformedURLException {
+    public LnurlAuth(URI uri) throws MalformedURLException, URISyntaxException {
         String lnurl = uri.getSchemeSpecificPart();
         Bech32.Bech32Data bech32 = Bech32.decode(lnurl, 2000);
         byte[] urlBytes = Bech32.convertBits(bech32.data, 0, bech32.data.length, 5, 8, false);
         String strUrl = new String(urlBytes, StandardCharsets.UTF_8);
-        this.url = new URL(strUrl);
+        this.url = new URI(strUrl).toURL();
 
         Map<String, String> parameterMap = new LinkedHashMap<>();
         String query = url.getQuery();
@@ -144,8 +144,8 @@ public class LnurlAuth {
         try {
             ECKey linkingKey = deriveLinkingKey(wallet);
             byte[] signature = getSignature(linkingKey);
-            return new URL(url.toString() + "&sig=" + Utils.bytesToHex(signature) + "&key=" + Utils.bytesToHex(linkingKey.getPubKey()));
-        } catch(MalformedURLException e) {
+            return new URI(url.toString() + "&sig=" + Utils.bytesToHex(signature) + "&key=" + Utils.bytesToHex(linkingKey.getPubKey())).toURL();
+        } catch(MalformedURLException | URISyntaxException e) {
             throw new IllegalStateException("Malformed return URL", e);
         }
     }
